tests/paczka1/small_fuzzy/20093137.err
Error in line 1: hf5Hmj1nlz S528 74,0
Error in line 12: hf5Hmj1nlz S989 287,52
